--- a/es2015.md
+++ b/es2015.md
@@ -1,3 +1,75 @@
 #module
+> `ES6`模块加载的机制，与`CommonJS`模块完全不同。`CommonJS`模块输出的是一个值的拷贝，一旦输出一个值，模块内部的变化就影响不到这个值，而`ES6`模块输出的是值的引用。
+
+> ##一般加载方式
+
+        // export.js
+        var firstName = 'Michael';
+        var lastName = 'Jackson';
+        var year = 1958;
+        export {firstName, lastName, year};
+        或者 export {firstName as name1, lastName as name2, year};
+        //export2.js
+        export var m = 1;
+        export function multiply (x, y) {
+          return x * y;
+        };
+        //import.js
+        import {firstName, lastName, year} from './export';
+        import { lastName as surname } from './export';
+
+> ##整体加载
+
+        //export.js
+        import { area, circumference } from './circle';
+        console.log('圆面积：' + area(4));
+        console.log('圆周长：' + circumference(14));
+        //import.js
+        import * as circle from './circle';
+        console.log('圆面积：' + circle.area(4));
+        console.log('圆周长：' + circle.circumference(14));
+
+> ##匿名函数输出方式
+
+        //export.js
+        //default保留字用在非匿名函数前，在模块外部是无效的，加载的时候，视同匿名函数加载。
+        export default function () {
+          console.log('foo');
+        }
+        或者
+        export default function foo() {
+          console.log('foo');
+        }
+        //import.js
+        import customName from './export-default';
+        customName(); // 'foo'
+
+> ##混合引入输出方式
+
+> ####正常输出和默认输出的比较
+
+**默认输出版本**
+
+        // 输出
+        export default function crc32() {
+          // ...
+        }
+        // 输入
+        import crc32 from 'crc32';
+**正常输出版本**
+
+        // 输出
+        export function crc32() {
+          // ...
+        };
+        // 输入
+        import {crc32} from 'crc32';
+
+> ####混合引入的方式
+
+        import customName, { otherMethod } from './export-default';
+
+
+#解构赋值
 
 [参考](http://es6.ruanyifeng.com/#README)
