--- a/es2015.md
+++ b/es2015.md
@@ -72,4 +72,36 @@
 
 #解构赋值
 
+#箭头函数
+
+>**使用箭头函数注意事项**
+>（1）函数体内的`this`对象，就是定义时所在的对象，而不是使用时所在的对象。
+>（2）不可以当作构造函数，也就是说，不可以使用`new`命令，否则会抛出一个错误。
+>（3）不可以使用`arguments`对象，该对象在函数体内不存在。如果要用，可以用`Rest`参数代替。
+>（4）不可以使用`yield`命令，因此箭头函数不能用作`Generator`函数。
+
+        var f = v => v;
+        var f = function(v) {
+          return v;
+        };
+
+        var f = () => 5;
+        // 等同于
+        var f = function (){ return 5 };
+
+        var sum = (num1, num2) => num1 + num2;
+        // 等同于
+        var sum = function(num1, num2) {
+          return num1 + num2;
+        };
+
+        // 正常函数写法
+        [1,2,3].map(function (x) {
+          return x * x;
+        });
+        // 箭头函数写法
+        [1,2,3].map(x => x * x);
+
+
+
 [参考](http://es6.ruanyifeng.com/#README)
